@@ -1,7 +1,7 @@
 /* daemon.h
  *
  * part of
- * joyd 0.0.6 2000-04-06
+ * joyd 0.0.7 2000-04-13
  *
  */
 
