@@ -2,9 +2,9 @@ Begin3
 
 Title:		joyd
 
-Version:	0.0.6
+Version:	0.0.7
 
-Entered-date:	06APR00
+Entered-date:	13APR00
 
 Description:	A very flexible program that allows you to execute
 		commands by a joystick or joypad attached to your
@@ -21,7 +21,7 @@ Maintained-by:	mitch@uni.de (Christian Garbs)
 Primary-site:	http://www.h.shuttle.de/mitch/joyd.en.html
 
 Alternate-site:	MetaLab.unc.edu /pub/Linux/hardware/daemons
-		26k joyd-0.0.6.tar.gz
+		26k joyd-0.0.7.tar.gz
 
 Platforms:	any input device supported by the Linux Joystick
 		driver
