@@ -14,7 +14,7 @@
 .TP 0.5i
 .B "\\$1 "
 ..
-.TH JOYDRC 5 "Apr 06 2000" "v0.0.6"
+.TH JOYDRC 5 "Apr 13 2000" "v0.0.7"
 .SH NAME
 .B joydrc
 \- configuration file for the joystick daemon
