@@ -3,7 +3,7 @@
  *
  *    this file is part of:
  *
- *    joyd 0.0.6   ---   The Joystick Daemon
+ *    joyd 0.0.7   ---   The Joystick Daemon
  *
  *    2000 (C) by Christian Garbs <mitch@uni.de>
  */
@@ -51,6 +51,7 @@
  */
 
 /*  joyd 0.0.6 2000-04-06
+ *  joyd 0.0.7 2000-04-13
  *
  *  (no changes)
  */
